# AutoReviewer

./: .gitignore  pyproject.toml
experiments/: debug_predictor.py  test_grpo_training.py  test_input_modalities.py  test_output_types.py  test_predictor.py  test_sft_training.py
lib/: __init__.py  citations.py  download_metadata.py  download_metadata_v2.py  download_missing_pdfs.py  download_pdfs.py  extract_pdf_manifest.py  hf_dataset.py  hf_upload.py  normalize.py  normalize_mineru.py  normalize_reviews.py  pdf_to_images.py  schemas.py  submission.py  utils.py
lib/legacy/: inference_utils.py  predict_iclr_reviews.py
lib/llamafactory/: README.md  __init__.py
lib/llamafactory/configs/: __init__.py  generator.py
lib/llamafactory/core/: __init__.py  registry.py  types.py
lib/llamafactory/data/: __init__.py  formatters.py  loaders.py
lib/llamafactory/inference/: __init__.py  predictor.py  ray_predictor.py
lib/llamafactory/inputs/: __init__.py  base.py  images_only.py  text_only.py  text_with_images.py
lib/llamafactory/outputs/: __init__.py  base.py  binary.py  citation.py  multiclass.py  rating.py
lib/llamafactory/training/: __init__.py  base.py  grpo.py  sft.py  zero_shot.py
lib/vllm_utils/: __init__.py  transform.py
notebooks/: explore_api.ipynb
sbatch/: create_train_test_split.sbatch  generate_hf_dataset.sbatch  normalize_mineru_array.sbatch  normalize_reviews_array.sbatch  pdf_to_images_array.sbatch  run_inference.sbatch
scripts/: analyze_mineru_stats.py  create_alpaca_dataset_for_llama_factory.py  create_train_test_split.py  fix_2020_pdf_manifest.py  generate_hf_dataset.py  run_inference.py  run_ray_inference.py
